--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Autonomy & controls researcher, with a focus on data-driven methods, learning, and human-centered design."
   location         : "Austin, TX"
-  employer         : "ODEN Institute for Computational Engineering and Sciences, UT Austin"
+  employer         : "ODEN Institute, UT Austin"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=bApIsIAAAAAJ" 
   email            :
