--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,9 @@ search_full_content: false # can have performance implications for large sites
 # category_archive_path: "/categories/#"
 # tag_archive_path: "/tags/#"
 
+# Include
+include:
+  - _pages
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
