--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,9 @@ search_full_content: false # can have performance implications for large sites
 
 # Include
 include:
+  - .htaccess
   - _pages
+  - files
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
