Moving index to bio.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 
 ajthor:
   name: Adam Thorpe
-  picture: /images/profile.jpg
+  picture: /images/profile_cropped.jpg
   bio: "Autonomy & Controls Researcher"
   google:
     scholar: bApIsIAAAAAJ
