--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,12 @@ plugins:
   - jekyll-paginate
   - jekyll-redirect-from
 
+# Collections
+collections:
+  talks:
+    output: true
+    permalink: /:collection/:path/
+
 # Front Matter Defaults
 defaults:
   # Posts defaults
@@ -96,8 +102,8 @@ defaults:
       layout: post
       share: true
   - scope:
-      path: "_papers"
-      type: papers
+      path: "_talks"
+      type: talks
     values:
       layout: page
       share: true
