--- a/_config.yml
+++ b/_config.yml
@@ -133,6 +133,9 @@ author:
 
 # Footer Links
 footer_links:
+  - title: Scholar
+    url: "https://scholar.google.com/citations?user=bApIsIAAAAAJ" 
+    icon: ai ai-google-scholar
   - title: GitHub
     url: https://github.com/ajthor
     icon: fab fa-github-square
