--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,7 @@ search_full_content: false # can have performance implications for large sites
 # Include
 include:
   - .htaccess
+  - _bibliography
   - _pages
   - files
 # Exclude from processing.
