--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@
 - title: Papers
   url: /papers/
 
-- title: Talks
-  url: /talks/
+# - title: Talks
+#   url: /talks/
 
 - title: Posts
   url: /posts/
